[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/un123known.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy_move.gd" type="Script" id=2]

[node name="Enemy_position" type="Sprite"]
script = ExtResource( 2 )
speed = 200.0
detect_radius = 400000

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.29, 2.734 )
texture = ExtResource( 1 )

[node name="Detect_radius_main" type="Area2D" parent="."]
scale = Vector2( 0.409076, 0.436364 )
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_radius_main"]
position = Vector2( -0.308136, 0 )

[node name="Player_near" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_near"]
position = Vector2( 0, -3 )

[connection signal="body_entered" from="Detect_radius_main" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Detect_radius_main" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Player_near" to="." method="_on_Player_near_body_entered"]
[connection signal="body_exited" from="Player_near" to="." method="_on_Player_near_body_exited"]
